2009-04-28 11:15 +0200  Rocco Rutte  <pdmef@gmx.net>  (c60ce9a3bae7)

	* doc/manual.xml.head: For spam detection, mention $imap_headers.
	Closes #3223.

2009-04-28 11:01 +0200  Rocco Rutte  <pdmef@gmx.net>  (b240c964db53)

	* ChangeLog, doc/manual.xml.head: Manual: Fix typo and reword
	paragraph

2009-04-26 21:09 +0200  Rocco Rutte  <pdmef@gmx.net>  (9fa4a3e74355)

	* UPDATING, doc/manual.xml.head, pop.c: POP: Support hcache updating,
	too.

	This also allows us to use hcache to manage "flagged" and "replied"
	message flags.

2009-04-26 20:44 +0200  Rocco Rutte  <pdmef@gmx.net>  (2fe6f875c7ae)

	* ChangeLog, imap/imap.c, mh.c: Sync header to hcache when synching
	MH/Maildir/IMAP folders. Closes #2942.

2009-04-26 12:00 +0200  Rocco Rutte  <pdmef@gmx.net>  (addbd9145230)

	* pager.c: Use dynamic buffer for displaying pager lines. Closes
	#3162.

	With too small fixed-size buffers we can't color/find certain words
	that span buffers. This needs to duplicate mutt_read_line with the
	adjustment to leave line termination in and not support breaking
	long lines using \ at EOL. Other callers may want to use this one
	instead, too as we support \-escaping in too many places.

2009-04-26 09:52 +0200  Rocco Rutte  <pdmef@gmx.net>  (1b7f5a7a4f44)

	* ChangeLog, init.h: Document suffixes for %f in $folder_format

2009-04-22 23:29 +0200  Bertram Felgenhauer  <int-e@gmx.de>  (0aa313a3bf20)

	* headers.c: Fix memory leak in mutt_edit_headers(). Closes #3220.

2009-04-25 10:51 +0200  Thomas Wiegner  <wiegner@gmx.de>  (8da22400a48d)

	* configure.ac, mkdtemp.c, protos.h: Add mkdtemp() from xfce to
	unbreak gpgme build on Solaris. Closes #3217.

2009-04-25 10:35 +0200  Rocco Rutte  <pdmef@gmx.net>  (c6de4f51b8c7)

	* ChangeLog, configure.ac, protos.h, strcasestr.c: Add strcasestr()
	from uclibc to unbreak (Open)Solaris build. Closes #3222.

2009-04-21 15:10 -0400  Aron Griffis  <agriffis@n01se.net>  (3d89eddb2d9a)

	* buffy.c: Equivalent mutt_buffy, but readable code
